# research

./: .gitignore  .gitmodules  Cargo.toml
cq/: Cargo.toml  README.md
cq/benches/: batch_verifying_times.rs  cq_times.rs  proof_size.rs  proving_times.rs  verifying_times.rs
cq/examples/: main.rs
cq/src/: cq.rs  errors.rs  feist_khovratovich_alg.rs  fiat_shamir.rs  kzg.rs  lib.rs  pre_compute.rs  prover.rs  verifier.rs
frost/: Cargo.toml
frost/src/: lib.rs  secp256k1_frost.rs
frost/src/core/: errors.rs  mod.rs  participant.rs  traits.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: errors.rs  lib.rs
merkle_tree/src/traits/: hasher.rs  merkle_tree.rs  mod.rs  proof.rs
twopc/: Cargo.toml  README.md
twopc/examples/: main.rs
twopc/src/: circuit.rs  decryption.rs  encryption.rs  error.rs  garbled_circuit.rs  lib.rs  ot.rs  password.rs
