[package]
name = "research"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twopc", "rsa-cryptography-rust", "frost"]

[workspace.dependencies]
ecies = "0.2.7"
rand = "0.8.5"
sha2 = "0.10.8"
thiserror = "2.0.3"
num-bigint = "0.4.6"
ark-secp256k1 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"