[package]
name = "research"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["twopc", "rsa-cryptography-rust", "cq"]

[workspace.dependencies]
ecies = "0.2.7"
rand = "0.8.5"
thiserror = "2.0.3"
num-bigint = "0.4.6"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
ark-bls12-381 = "0.5.0"
sha2 = "0.9.1"
