[package]
name = "cq"
version = "0.1.0"
edition = "2021"

[[example]]
name = "cq-example"
path = "examples/main.rs"

[dependencies]
ark-ec = {workspace = true}
ark-poly = {workspace = true}
ark-ff = {workspace = true}
ark-serialize = {workspace = true}
ark-std = {workspace = true}
rand = {workspace = true}
ark-bls12-381 = {workspace = true}
sha2 = {workspace = true}
thiserror = {workspace = true}
ark-bn254 = "0.5.0"