[package]
name = "twopc"
version = "0.1.0"
edition = "2021"

[[example]]
name = "twopc-example"
path = "examples/main.rs"

[dependencies]
ecies = {workspace = true}
rand = {workspace = true}
thiserror = {workspace = true}
rrsa = { path = "../rsa-cryptography-rust" }
num-bigint = { workspace = true, features = ["rand"] }